# gitgutt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: auth.rs  cli.rs  github.rs  main.rs
src/domain/: metrics.rs  mod.rs  stats.rs  types.rs
src/render/: charts.rs  mod.rs  tables.rs  theme.rs
