[package]
name = "gitgutt"
version = "0.1.0"
edition = "2024"
description = "GitHub PR metrics for engineering teams"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
octocrab = "0.44"
serde = { version = "1", features = ["derive"] }
tabled = "0.18"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
